# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./days";
 export * from "./machines";
 export * from "./settings";
+export * from "./dayMachines";
